samples/_failures_safe/1761800061_b6bf92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0f09b73.c: In function ‘main’:
./samples/SAFE/__tmp_f0f09b73.c:154:5: error: expected declaration or statement at end of input
  154 |     for (int i = 0; i < num_types; i++) {
      |     ^~~
./samples/SAFE/__tmp_f0f09b73.c:154:5: error: expected declaration or statement at end of input
